[package]
name = "prism3-clock"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Hu Haixing <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/3-prism/prism3-rust-clock"
description = "Thread-safe clock abstractions for Rust: monotonic clocks, mock testing, high-precision time meters, and timezone support"
homepage = "https://github.com/3-prism/prism3-rust-clock"
documentation = "https://docs.rs/prism3-clock"
readme = "README.md"
keywords = ["clock", "time", "monotonic", "mock", "testing"]
categories = ["date-and-time", "development-tools::testing"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
]

[lib]
name = "prism3_clock"
doctest = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
parking_lot = "0.12"

[dev-dependencies]
serde_json = "1.0"

