[package]
name = "qubit-clock"
version = "0.2.3"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-clock"
description = "Thread-safe clock abstractions for Rust: monotonic clocks, mock testing, high-precision time meters, and timezone support"
homepage = "https://github.com/qubit-ltd/rs-clock"
documentation = "https://docs.rs/qubit-clock"
readme = "README.md"
keywords = ["clock", "time", "monotonic", "mock", "testing"]
categories = ["date-and-time", "development-tools::testing"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
]

[lib]
name = "qubit_clock"
doctest = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
parking_lot = "0.12"

[dev-dependencies]
serde_json = "1.0"
